# T4DailyDriver

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cuda124  Makefile  PRODUCTION_FEATURES.md  README.md  README_PRODUCTION.md  app.py  app_enhanced.py  auth.py  constraints-cu121-py310.txt  constraints-cuda124.txt  constraints.lock.txt  constraints.txt  docker-compose.cuda124.yaml  docker-compose.override.yml  docker-compose.yaml  metrics.py  prometheus-cuda124.yml  prometheus.yml  pyproject.toml  requirements-cuda124.txt  requirements-dev.txt  requirements.txt  setup.cfg  test_port_standardization.py  test_security.py
.github/workflows/: ci-cd.yml  ci.yml
app/: __init__.py  config.py  main.py  main_enhanced.py  openai_compat.py  reliability.py  runtime_warmup.py
extras/: airports.txt
grafana/dashboards/: vllm-dashboard.json
hack/constraints/: constraints-cuda124-minimal.txt
k8s/: configmap.yaml  deployment-canary.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  role.yaml  rolebinding.yaml  service-nodeport.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
monitoring/: alerts-cuda-upgrade.yaml
scripts/: benchmark_comparison.sh  deploy.sh  download_model.py  preflight_check.sh  setup-dev.sh  smoke_compose.sh  upgrade_py311.sh  validate_canary_metrics.py  validate_ports.sh  verify_runtime.py
tests/: conftest.py  test_enhanced_features.py  test_performance.py  test_t4_validation.py
tests/integration/: test_vllm_integration.py
tests/load/: artillery.yml  processor.js
tests/unit/: test_app.py  test_app_enhanced.py
