[metadata]
name = t4dailydriver
version = 0.1.0
description = T4 Daily Driver Project
python_requires = >=3.10,<3.12

[options]
packages = find:
python_requires = >=3.10,<3.12

[options.packages.find]
exclude =
    tests*
    docs*
    scripts*

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    cache,
    htmlcov

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*